<resources>
    <string name="app_name">TestApiIpidyMethods</string>
    <string name="section_name_account">Accounts</string>
    <string name="section_name_admin">Admin</string>
    <string name="section_name_auth">Authorization</string>
    <string name="title_list_section">Ipsidy Test Methods</string>
    <string name="title_activity_account">Accounts Methods</string>
    <string name="title_activity_admin">Admin Methods</string>
    <string name="title_activity_auth">Authorization Methods</string>
    <string name="username_ipsidy">acubillos</string>
    <string name="password_ipsidy">OTFedj$3262</string>
    <string name="account_getApiKeys_Method">GetApiKeys</string>
    <string name="title_activity_camera_preview">CameraPreview</string>
    <string name="title_camera_preview">CameraPreview</string>
    <string name="button_create_account">Create Account</string>
    <string name="button_verify">Verify Identification</string>
    <string name="button_create_bio">Confirm</string>
    <string name="button_try_again_bio">Try Again</string>
    <string name="close_created_popup">Close</string>
    <string name="delete_storage">Delete Data Storage</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>